tests/semantic/pass/simple.c
int a;
int b;
char c;

int main() {

}
