tests/semantic/fail/doubleGlobalDeclaration-fail.c

// this should not work because of the type
int a;
char a;

int main() {
}
